--- a/.github/workflows/release-python.yaml
+++ b/.github/workflows/release-python.yaml
@@ -144,7 +144,7 @@ jobs:
           path: dist
 
   pypi-publish:
-    name: Publish to PyPI
+    name: publish-to-pypi
     needs: [linux, musllinux, windows, macos, sdist]
     environment:
       name: release-python
@@ -167,40 +167,3 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           verbose: true
-
-  # release:
-  #   name: Github Release
-  #   runs-on: ubuntu-latest
-  #   # needs: [linux, musllinux, windows, macos, sdist]
-  #   needs: [linux, sdist]
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         path: dist
-  #     # update the tip-python tag to the head of this branch
-  #     - uses: actions/github-script@v7
-  #       with:
-  #         script: |
-  #           github.rest.git.updateRef({
-  #             owner: context.repo.owner,
-  #             repo: context.repo.repo,
-  #             ref: "tags/tip-python",
-  #             sha: context.sha,
-  #           });
-  #     # list everything we're going to upload
-  #     - run: ls -lah dist/**/*.whl
-  #     - run: ls -lah dist/wheels-sdist/*
-  #     # remove existing assets
-  #     - env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       run: |
-  #         gh release view tip-python --json assets --jq '.assets[].name' | xargs -IQ gh release delete-asset -y tip-python Q
-  #     # upload wheels
-  #     - run: gh release upload tip-python dist/**/*.whl
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #     # upload sdist
-  #     - run: gh release upload tip-python dist/wheels-sdist/*
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
